src/styles/utilities/_utilities.scss
/* ... */
// margin x

.neeto-ui-mx-0 {
  margin-inline-start: 0;
  margin-inline-end: 0;
}

.neeto-ui-mx-1 {
  margin-inline-start: 0.25rem;
  margin-inline-end: 0.25rem;
}

.neeto-ui-mx-2 {
  margin-inline-start: 0.5rem;
  margin-inline-end: 0.5rem;
}

.neeto-ui-mx-3 {
  margin-inline-start: 0.75rem;
  margin-inline-end: 0.75rem;
}

.neeto-ui-mx-4 {
  margin-inline-start: 1rem;
  margin-inline-end: 1rem;
}

.neeto-ui-mx-5 {
  margin-inline-start: 1.25rem;
  margin-inline-end: 1.25rem;
}

.neeto-ui-mx-6 {
  margin-inline-start: 1.5rem;
  margin-inline-end: 1.5rem;
}

// margin y

.neeto-ui-my-0 {
  margin-top: 0;
  margin-bottom: 0;
}

.neeto-ui-my-1 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
}

.neeto-ui-my-2 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

.neeto-ui-my-3 {
  margin-top: 0.75rem;
  margin-bottom: 0.75rem;
}

.neeto-ui-my-4 {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.neeto-ui-my-5 {
  margin-top: 1.25rem;
  margin-bottom: 1.25rem;
}

.neeto-ui-my-6 {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}

// transition
.neeto-ui-transition-none {
  transition-property: none;
}

.neeto-ui-transition-all {
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.neeto-ui-transition-colors {
  transition-property: background-color, border-color, color, fill, stroke;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.neeto-ui-list-none {
  list-style-type: none;
}

.neeto-ui-rounded-none {
  border-radius: var(--neeto-ui-rounded-none);
}

.neeto-ui-rounded-sm {
  border-radius: var(--neeto-ui-rounded-sm);
}

.neeto-ui-rounded {
  border-radius: var(--neeto-ui-rounded);
}

.neeto-ui-rounded-md {
  border-radius: var(--neeto-ui-rounded-md);
}

.neeto-ui-rounded-lg {
  border-radius: var(--neeto-ui-rounded-lg);
}

.neeto-ui-rounded-xl {
  border-radius: var(--neeto-ui-rounded-xl);
}

.neeto-ui-rounded-full {
  border-radius: var(--neeto-ui-rounded-full);
}

// border width

.neeto-ui-border-t {
  border-top-width: 1px;
}

.neeto-ui-border-l {
  border-inline-start-width: 1px;
}

.neeto-ui-border-r {
  border-inline-end-width: 1px;
}

.neeto-ui-border-b {
  border-bottom-width: 1px;
}

// offset

// left
.neeto-ui-left-0 {
  inset-inline-start: 0;
}

.neeto-ui-left-1 {
  inset-inline-start: 0.25rem;
}

.neeto-ui-left-2 {
  inset-inline-start: 0.5rem;
}

.neeto-ui-left-3 {
  inset-inline-start: 0.75rem;
}

.neeto-ui-left-4 {
  inset-inline-start: 1rem;
}

.neeto-ui-left-5 {
  inset-inline-start: 1.25rem;
}

.neeto-ui-left-6 {
  inset-inline-start: 1.5rem;
}

// top
.neeto-ui-top-0 {
  top: 0;
}

.neeto-ui-top-1 {
  top: 0.25rem;
}

.neeto-ui-top-2 {
  top: 0.5rem;
}

.neeto-ui-top-3 {
  top: 0.75rem;
}

.neeto-ui-top-4 {
  top: 1rem;
}

.neeto-ui-top-5 {
  top: 1.25rem;
}

.neeto-ui-top-6 {
  top: 1.5rem;
}

// right
.neeto-ui-right-0 {
  inset-inline-end: 0;
}

.neeto-ui-right-1 {
  inset-inline-end: 0.25rem;
}

.neeto-ui-right-2 {
  inset-inline-end: 0.5rem;
}

.neeto-ui-right-3 {
  inset-inline-end: 0.75rem;
}

.neeto-ui-right-4 {
  inset-inline-end: 1rem;
}

.neeto-ui-right-5 {
  inset-inline-end: 1.25rem;
}

.neeto-ui-right-6 {
  inset-inline-end: 1.5rem;
}

// bottom
.neeto-ui-bottom-0 {
  bottom: 0;
}

.neeto-ui-bottom-1 {
  bottom: 0.25rem;
}

.neeto-ui-bottom-2 {
  bottom: 0.5rem;
}

.neeto-ui-bottom-3 {
  bottom: 0.75rem;
}

.neeto-ui-bottom-4 {
  bottom: 1rem;
}

.neeto-ui-bottom-5 {
  bottom: 1.25rem;
}

.neeto-ui-bottom-6 {
  bottom: 1.5rem;
}

// position
.neeto-ui-absolute {
  position: absolute;
}

.neeto-ui-relative {
  position: relative;
}

.neeto-ui-sticky {
  position: sticky;
}

.neeto-ui-no-outline {
  outline: none !important;
}

// text-transform
.neeto-ui-uppercase {
  text-transform: uppercase
}

.neeto-ui-lowercase {
  text-transform: lowercase
}

.neeto-ui-capitalize {
  text-transform: capitalize
}

.neeto-ui-normal-case {
  text-transform: none
}

.neeto-ui-italic {
  font-style: italic
}

.neeto-ui-not-italic {
  font-style: normal
}

// cursor

.neeto-ui-cursor-auto {
  cursor: auto
}

.neeto-ui-cursor-default {
  cursor: default
}

.neeto-ui-cursor-pointer {
  cursor: pointer
}

.neeto-ui-cursor-wait {
  cursor: wait
}

.neeto-ui-cursor-text {
  cursor: text
}

.neeto-ui-cursor-move {
  cursor: move
}

.neeto-ui-cursor-help {
  cursor: help
}

.neeto-ui-cursor-not-allowed {
  cursor: not-allowed
}

// font size inherit

.neeto-ui-font-size-inherit {
  font-size: inherit !important;
}

// divide-y

.divide-y > :not([hidden]) ~ :not([hidden]){
  border-color: rgb(var(--neeto-ui-gray-200));
}

